Name:                   hs-ecc-demo
Category:               Math
Version:                0.0.0
License:                BSD3
License-File:           LICENSE
Author:                 Eric McCorkle
Maintainer:             Eric McCorkle <emc2@metricspace.net>
Stability:              Experimental
Synopsis:               A NON-SECURE implementation of elliptic-curve cryptography, for experimentation.
Homepage:               https://github.com/emc2/hs-ecc-demo
Bug-Reports:            https://github.com/emc2/hs-ecc-demo/issues
Copyright:              Copyright (c) 2016 Eric McCorkle.  All rights reserved.
Description:
  Library for demonstrating elliptic curve cryptograph and experimenting with elliptic curves.
  THIS IS NOT INTENDED TO BE A SECURE IMPLEMENTATION!!!  DO NOT USE IT FOR SECURITY!!!
Build-type:             Simple
Cabal-version:          >= 1.16

Source-Repository head
  Type: git
  Location: git@github.com:emc2/hs-ecc-demo.git

Test-Suite UnitTest
  default-language:     Haskell2010
  type:                 exitcode-stdio-1.0
  Main-Is:              UnitTest.hs
  hs-source-dirs:       src test
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0

Library
  default-language:     Haskell2010
  hs-source-dirs:       src
  build-depends:        base >= 4.8 && < 5, Cabal >= 1.16.0
  exposed-modules:      
